Fixed stack overflow

--- a/examples/test_content.css
+++ b/examples/test_content.css
@@ -2,7 +2,7 @@
     background-color: #fcfcfc;
     color: #000000;
     border: 1px solid #b7b7b7;
-    /* border-radius: 4px;
+    border-radius: 4px;
     box-shadow: 0px 0px 3px #c5c5c5ad;
-    background: linear-gradient(#efefef, #fcfcfc); */
+    background: linear-gradient(#efefef, #fcfcfc);
 }
